--- a/docs/posts/10wk-2.out.ipynb
+++ b/docs/posts/10wk-2.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "cb026796-5901-4eab-aacd-d2160a06ea95"
+      "id": "8b07847e-df22-4442-adfe-2cdafd90f110"
     },
     {
       "cell_type": "code",
@@ -33,7 +33,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "cf77074d-a65c-4a6f-9fe6-e021c44790bc"
+      "id": "85534895-5b37-4ec3-9bf9-ec77b04a48c8"
     },
     {
       "cell_type": "code",
@@ -57,7 +57,7 @@
         "\n",
         "`-` 주어진 자료가 아래와 같다고 하자."
       ],
-      "id": "4d679c23-f0ca-46f1-ab18-403c6c956834"
+      "id": "db946459-2100-4588-8360-71c44306c4b2"
     },
     {
       "cell_type": "code",
@@ -103,7 +103,7 @@
       "source": [
         "`-` 문제1: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "0bcd36dd-f919-404d-9d9b-490926b6452d"
+      "id": "c7c4394a-cf25-43d9-aa11-9346dbe6fa7a"
     },
     {
       "cell_type": "code",
@@ -145,7 +145,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "a3408d50-3bdd-4b1e-a198-fd853ab17023"
+      "id": "ca0cdb5a-8b64-485f-9e5c-603d295def85"
     },
     {
       "cell_type": "code",
@@ -199,7 +199,7 @@
       "source": [
         "`-` 문제2: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "96413450-f35a-4459-9dc4-e7ca048a7545"
+      "id": "438afe81-1f6c-4ce1-b4ce-3bd0c06375ca"
     },
     {
       "cell_type": "code",
@@ -242,7 +242,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "ac1b0d55-da41-4c57-9143-9934a2a53476"
+      "id": "1af2af3f-8c55-46e7-b4fa-50387a55b6c1"
     },
     {
       "cell_type": "code",
@@ -302,7 +302,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "0ebe1615-c33b-4fea-86e4-47419b21968f"
+      "id": "2097312e-f988-4d5d-a3de-81dce1375757"
     },
     {
       "cell_type": "code",
@@ -355,7 +355,7 @@
         "옥순의I성향$\\times$영식의I성향 $+$ 옥순의N성향$\\times$영식의N성향 $+$\n",
         "옥순의매력 $+$ 영식의매력"
       ],
-      "id": "15aaf8a8-428f-432a-bd53-595cde85b60a"
+      "id": "26ff08e5-5ea6-4993-a73b-7c4fca325617"
     },
     {
       "cell_type": "code",
@@ -381,7 +381,7 @@
         "**(2)** 영자(IN)와 다호(ES)의 궁합 $\\approx$ 영자I성향$\\times$다호I성향\n",
         "$+$ 영자N성향$\\times$다호의N성향 $+$ 영자의매력 $+$ 다호의매력"
       ],
-      "id": "a5bcdc56-7852-4d49-a429-918986208855"
+      "id": "f2a8bc6b-4888-448f-9778-6270cee80be2"
     },
     {
       "cell_type": "code",
@@ -431,7 +431,7 @@
         "**(3)** 하니(I)와 영호(IS)의 궁합 $\\approx$ 하니I성향$\\times$영호I성향\n",
         "$+$ 하니N성향$\\times$영호의N성향 $+$ 하니의매력 $+$ 영호의매력"
       ],
-      "id": "ae2c8a3d-c5b5-4db9-95e0-b4857dabd337"
+      "id": "af6b2f45-eb9b-43ba-b734-69731ba19015"
     },
     {
       "cell_type": "code",
@@ -458,7 +458,7 @@
         "\n",
         "`-` 전체 사용자의 설정값"
       ],
-      "id": "2023974e-12b9-40f8-9448-655a9d6e4ff3"
+      "id": "1be64d78-37e0-42cc-bc6d-c32ab575a3e7"
     },
     {
       "cell_type": "code",
@@ -511,7 +511,7 @@
       "source": [
         "`-` 아래의 행렬곱 관찰"
       ],
-      "id": "ffacb693-0717-4134-9b68-d99401ecf18e"
+      "id": "46ffd6c0-0dff-4241-b0bf-1c4eea8b743d"
     },
     {
       "cell_type": "code",
@@ -556,7 +556,7 @@
         "\n",
         "`-` 주어진 자료와 우리가 임의로 만든 궁합매트릭스를 비교해보자."
       ],
-      "id": "438504ec-1ced-4a45-89d4-633018b29db7"
+      "id": "72a09539-36f0-42b0-8add-e0d714d140a1"
     },
     {
       "cell_type": "code",
@@ -615,55 +615,7 @@
         "\n",
         "$${\\tt df\\_view} \\approx {\\bf W}@{\\bf M}^\\top + bias$$\n",
         "\n",
-        "`-` 아래의 정보를 참고하여 위의 수식을 다시 정리하면.."
-      ],
-      "id": "14746d5f-95ea-4b4d-8856-f604578c28cd"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 884,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "pd.DataFrame(pd.DataFrame(torch.concat([W,b1],axis=1)))\\\n",
-        ".set_axis(['옥순(IN)','영자(IN)','정숙(IS)','영숙(IS)','순자(EN)','현숙(EN)','서연(ES)','보람(ES)','하니(I)'])\\\n",
-        ".set_axis(['I성향','N성향','bias'],axis=1)"
-      ],
-      "id": "ca2024ec-724e-45db-b9c6-ba34fd4c42df"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 885,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "pd.DataFrame(pd.DataFrame(torch.concat([M,b2],axis=1)))\\\n",
-        ".set_axis(['영식(IN)','영철(IN)','영호(IS)','광수(IS)','상철(EN)','영수(ES)','규빈(ES)','다호(ES)'])\\\n",
-        ".set_axis(['I성향','N성향','bias'],axis=1)"
-      ],
-      "id": "45bdd638-39b3-4c4f-9e3e-95317af63ec3"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 858,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "df_view"
-      ],
-      "id": "93deeda5-66b8-470e-b8b5-25f6d4857dea"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "—이런식으로?—\n",
+        "`-` 아래의 정보를 참고하여 위의 수식을 다시 정리하면..\n",
         "\n",
         "|    W     |    M     |  여성특징  |  남성특징  |   I궁합   |   N궁합    |  bias   |  yhat  |  y   |\n",
         "|:------:|:------:|:------:|:------:|:------:|:------:|:------:|:------:|:------:|\n",
@@ -720,7 +672,7 @@
         "\n",
         "[6] 1.21+1.11 = 2.32"
       ],
-      "id": "ce6b921a-075a-4791-95e6-76097bb1e599"
+      "id": "4873b2b3-3698-4943-a448-e611246fe0cc"
     },
     {
       "cell_type": "code",
@@ -741,7 +693,7 @@
       "source": [
         "`-` 이름을 숫자화"
       ],
-      "id": "459b1a2a-a146-45ac-b165-c85343d77ddb"
+      "id": "8d77b4be-a532-4395-b0be-2ecdc7cc4727"
     },
     {
       "cell_type": "code",
@@ -776,25 +728,27 @@
       "source": [
         "`-` 텐서화 + one_hot-인코딩"
       ],
-      "id": "ca9a235c-aba2-4cb7-8aca-1f5d23d81842"
+      "id": "b3fb30d1-c123-4688-8348-364ab2aa466d"
     },
     {
       "cell_type": "code",
-      "execution_count": 948,
+      "execution_count": 1037,
       "metadata": {
         "tags": []
       },
       "outputs": [],
       "source": [
         "y = torch.tensor(df_train['y']).float().reshape(-1,1)\n",
-        "E1 = torch.nn.functional.one_hot(torch.tensor(df_train['X1'])).float()\n",
-        "E2 = torch.nn.functional.one_hot(torch.tensor(df_train['X2'])).float()"
+        "X1 = torch.tensor(df_train['X1'])\n",
+        "X2 = torch.tensor(df_train['X2'])\n",
+        "E1 = torch.nn.functional.one_hot(X1).float()\n",
+        "E2 = torch.nn.functional.one_hot(X2).float()"
       ],
       "id": "c8ff8904-c747-4fff-a8aa-caa5e6c953de"
     },
     {
       "cell_type": "code",
-      "execution_count": 949,
+      "execution_count": 1038,
       "metadata": {
         "tags": []
       },
@@ -806,7 +760,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 950,
+      "execution_count": 1039,
       "metadata": {
         "tags": []
       },
@@ -818,7 +772,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 951,
+      "execution_count": 1040,
       "metadata": {
         "tags": []
       },
@@ -830,7 +784,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 952,
+      "execution_count": 1041,
       "metadata": {
         "tags": []
       },
@@ -842,7 +796,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 953,
+      "execution_count": 1045,
       "metadata": {
         "tags": []
       },
@@ -852,6 +806,8 @@
           "name": "stdout",
           "text": [
             "y.shape: torch.Size([63, 1])\n",
+            "X1.shape: torch.Size([63]) // X1.unique(): tensor([0, 1, 2, 3, 4, 5, 6, 7, 8])\n",
+            "X2.shape: torch.Size([63]) // X2.unique(): tensor([0, 1, 2, 3, 4, 5, 6, 7])\n",
             "E1.shape: torch.Size([63, 9]) // 이때 9은 여성참가자의 수\n",
             "E2.shape: torch.Size([63, 8]) // 이때 8은 남성참가자의 수"
           ]
@@ -859,6 +815,8 @@
       ],
       "source": [
         "print(f'y.shape: {y.shape}')\n",
+        "print(f'X1.shape: {X1.shape} // X1.unique(): {X1.unique()}')\n",
+        "print(f'X2.shape: {X2.shape} // X2.unique(): {X2.unique()}')\n",
         "print(f'E1.shape: {E1.shape} // 이때 {E1.shape[-1]}은 여성참가자의 수')\n",
         "print(f'E2.shape: {E2.shape} // 이때 {E2.shape[-1]}은 남성참가자의 수')"
       ],
@@ -871,11 +829,11 @@
         "`-` `X1` -\\> `여성특징`, `X1` -\\> `여성bias`, `X2` -\\> `남성특징`, `X2`\n",
         "-\\> `남성bias` 구현"
       ],
-      "id": "85dbee83-e26b-45d9-85e6-8bdf403ab8a4"
+      "id": "59085f36-4043-40bc-b3a3-a85d1b1c4c05"
     },
     {
       "cell_type": "code",
-      "execution_count": 998,
+      "execution_count": 1046,
       "metadata": {
         "tags": []
       },
@@ -886,8 +844,8 @@
         "b1 = torch.nn.Linear(in_features=9, out_features=1, bias=False)\n",
         "l2 = torch.nn.Linear(in_features=8, out_features=2, bias=False)\n",
         "b2 = torch.nn.Linear(in_features=8, out_features=1, bias=False)\n",
-        "W_features = l1(E1) \n",
-        "M_features = l2(E2) \n",
+        "W_features = l1(E1) # l1(onehot(X1))\n",
+        "M_features = l2(E2) # l2(onehot(X2))\n",
         "W_bias = b1(E1) \n",
         "M_bias = b2(E2) "
       ],
@@ -895,7 +853,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 999,
+      "execution_count": 1047,
       "metadata": {
         "tags": []
       },
@@ -914,11 +872,11 @@
         "\n",
         "`-` step1: yhat을 구하자."
       ],
-      "id": "ab073f12-7ea4-4a67-a3c8-efc2292b2b87"
+      "id": "c6886aef-8abd-45b4-b9be-36791f24e0c5"
     },
     {
       "cell_type": "code",
-      "execution_count": 1000,
+      "execution_count": 1048,
       "metadata": {
         "tags": []
       },
@@ -937,11 +895,11 @@
       "source": [
         "`-` step2: 손실계산"
       ],
-      "id": "039925ae-4dc2-470e-b6fc-faf5dbf567d4"
+      "id": "1b1b16b6-c519-474b-88c5-1b2f6120e34f"
     },
     {
       "cell_type": "code",
-      "execution_count": 1001,
+      "execution_count": 1049,
       "metadata": {
         "tags": []
       },
@@ -958,11 +916,11 @@
       "source": [
         "`-` step3: 미분"
       ],
-      "id": "8db89b7c-ed24-4f28-b333-a0ab7e5ac350"
+      "id": "3481bba2-e3a5-4e2c-b212-67c2699dc878"
     },
     {
       "cell_type": "code",
-      "execution_count": 1002,
+      "execution_count": 1050,
       "metadata": {
         "tags": []
       },
@@ -974,7 +932,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1003,
+      "execution_count": 1051,
       "metadata": {
         "tags": []
       },
@@ -986,7 +944,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1004,
+      "execution_count": 1052,
       "metadata": {
         "tags": []
       },
@@ -998,7 +956,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1005,
+      "execution_count": 1053,
       "metadata": {
         "tags": []
       },
@@ -1010,7 +968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1006,
+      "execution_count": 1054,
       "metadata": {
         "tags": []
       },
@@ -1026,11 +984,11 @@
       "source": [
         "`-` step4: update"
       ],
-      "id": "2863fe72-b615-44a5-abea-b1aea1751185"
+      "id": "724e9dfc-8dc1-4dd4-a0ef-e7e7103a0518"
     },
     {
       "cell_type": "code",
-      "execution_count": 1007,
+      "execution_count": 1055,
       "metadata": {
         "tags": []
       },
@@ -1044,7 +1002,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1010,
+      "execution_count": 1056,
       "metadata": {
         "tags": []
       },
@@ -1056,7 +1014,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1012,
+      "execution_count": 1057,
       "metadata": {
         "tags": []
       },
@@ -1068,7 +1026,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1015,
+      "execution_count": 1058,
       "metadata": {
         "tags": []
       },
@@ -1080,7 +1038,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1016,
+      "execution_count": 1059,
       "metadata": {
         "tags": []
       },
@@ -1092,7 +1050,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1018,
+      "execution_count": 1060,
       "metadata": {
         "tags": []
       },
@@ -1108,11 +1066,11 @@
       "source": [
         "## E. 코드정리"
       ],
-      "id": "bde376cf-cfa4-4d9a-b1bd-a2800c528d4c"
+      "id": "3381d198-3482-49bb-a67d-347226412e92"
     },
     {
       "cell_type": "code",
-      "execution_count": 1019,
+      "execution_count": 1062,
       "metadata": {
         "tags": []
       },
@@ -1160,7 +1118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1029,
+      "execution_count": 1063,
       "metadata": {
         "tags": []
       },
@@ -1176,11 +1134,11 @@
       "source": [
         "## F. 모형의 해석"
       ],
-      "id": "edc8a7c2-68f1-45d4-ad5d-26dc7250350e"
+      "id": "00507a58-e8b1-43b4-a2de-b1c5441e7dc0"
     },
     {
       "cell_type": "code",
-      "execution_count": 1036,
+      "execution_count": 1064,
       "metadata": {
         "tags": []
       },
@@ -1195,7 +1153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1035,
+      "execution_count": 1065,
       "metadata": {
         "tags": []
       },
