--- a/docs/posts/10wk-2-lecture.out.ipynb
+++ b/docs/posts/10wk-2-lecture.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "83e37967-525f-443c-a394-8290bd2b4944"
+      "id": "94914837-9250-4bcb-a125-01ef3f84bea4"
     },
     {
       "cell_type": "code",
@@ -33,7 +33,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "9362477a-45e0-4ad1-b26a-9d404c228f8c"
+      "id": "0ccbeb69-62f3-4208-96e1-0b42a4e3cf78"
     },
     {
       "cell_type": "code",
@@ -58,7 +58,7 @@
         "\n",
         "`-` 주어진 자료가 아래와 같다고 하자."
       ],
-      "id": "59a1f58b-4be4-4451-9173-3bc1eb11d17e"
+      "id": "3f1c0642-ba0c-42c2-8ea6-a92fe5d68b20"
     },
     {
       "cell_type": "code",
@@ -104,7 +104,7 @@
       "source": [
         "`-` 문제1: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "127ff30f-663b-4532-b116-c5fe8458bef2"
+      "id": "a4ca9c7b-7608-43b2-8baf-5d0f9d25618b"
     },
     {
       "cell_type": "code",
@@ -148,7 +148,7 @@
         "\n",
         "`-` 문제2: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "6afb440f-f7b5-4de4-8461-8c8d7864a0c8"
+      "id": "e1f2390a-b862-4236-b3f1-b1995d2259b4"
     },
     {
       "cell_type": "code",
@@ -199,7 +199,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "8a71b969-143f-475c-950a-626a6c3e4c37"
+      "id": "ab9dd7ad-285c-4c29-99f9-fd3e6aa850d5"
     },
     {
       "cell_type": "code",
@@ -252,7 +252,7 @@
         "옥순의I성향$\\times$영식의I성향 $+$ 옥순의N성향$\\times$영식의N성향 $+$\n",
         "옥순의매력 $+$ 영식의매력"
       ],
-      "id": "d9f76a3b-5755-4ca1-9a20-4cbff782aaa2"
+      "id": "7148eee0-fa93-4da2-add3-c5a0c4ccad70"
     },
     {
       "cell_type": "code",
@@ -276,7 +276,7 @@
         "**(2)** 영자(IN)와 다호(ES)의 궁합 $\\approx$ 영자I성향$\\times$다호I성향\n",
         "$+$ 영자N성향$\\times$다호의N성향 $+$ 영자의매력 $+$ 다호의매력"
       ],
-      "id": "2b15f48b-80ee-4bad-b501-2fae7bae63e4"
+      "id": "acede87e-45fa-4465-88a2-56fd67fdcd0d"
     },
     {
       "cell_type": "code",
@@ -300,7 +300,7 @@
         "**(3)** 하니(I)와 영호(IS)의 궁합 $\\approx$ 하니I성향$\\times$영호I성향\n",
         "$+$ 하니N성향$\\times$영호의N성향 $+$ 하니의매력 $+$ 영호의매력"
       ],
-      "id": "2e44db04-4808-4fde-b1d9-5acd65f189fc"
+      "id": "86bbb122-3ef5-4d48-a350-c059ccb48625"
     },
     {
       "cell_type": "code",
@@ -325,7 +325,7 @@
         "\n",
         "`-` 전체 사용자의 설정값"
       ],
-      "id": "38fe783e-8b8b-4531-8d39-65f84c804350"
+      "id": "65a85fcf-2ea0-41e8-aacf-56ee06c68459"
     },
     {
       "cell_type": "code",
@@ -378,7 +378,7 @@
       "source": [
         "`-` 아래의 행렬곱 관찰"
       ],
-      "id": "c0888029-6a23-4965-bff1-caa67223ee31"
+      "id": "ce4c26c1-df8f-41d1-b508-6d19100a8750"
     },
     {
       "cell_type": "code",
@@ -493,7 +493,7 @@
         "\n",
         "[6] 1.21+1.11 = 2.32"
       ],
-      "id": "2e204544-e5ab-4f0e-b3c2-77633c66fd05"
+      "id": "d926a158-73e3-48d1-bf12-8c1430facc5d"
     },
     {
       "cell_type": "code",
@@ -514,7 +514,7 @@
       "source": [
         "`-` 이름을 숫자화"
       ],
-      "id": "8787767a-a638-4322-a069-d8d7c98023f6"
+      "id": "0371fab2-8545-4416-ba89-cd7841911979"
     },
     {
       "cell_type": "code",
@@ -547,345 +547,28 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "`-` 텐서화 + one_hot-인코딩"
-      ],
-      "id": "27a171b0-8ca2-4b7f-8047-b173b729a09c"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 58,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "y = torch.tensor(df_train['y']).float().reshape(-1,1)\n",
-        "E1 = torch.nn.functional.one_hot(torch.tensor(df_train['X1'])).float()\n",
-        "E2 = torch.nn.functional.one_hot(torch.tensor(df_train['X2'])).float()"
-      ],
-      "id": "c8ff8904-c747-4fff-a8aa-caa5e6c953de"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 34,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "df_train['X1'][0],E1[0]"
-      ],
-      "id": "8f3145cc-f33f-4b60-bad0-fa6a3b98cddb"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 38,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "df_train['X1'][62],E1[62]"
-      ],
-      "id": "3871fa88-c364-4ca3-8c53-4dbb72b9c313"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 39,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "df_train['X2'][0],E2[0]"
-      ],
-      "id": "d78accb5-c3b9-4706-a35f-4d29b71c1814"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 40,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "df_train['X2'][62],E2[62]"
-      ],
-      "id": "c798262f-09fb-4940-a24c-5701ce4823aa"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 41,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "y.shape: torch.Size([63, 1])\n",
-            "E1.shape: torch.Size([63, 9]) // 이때 9은 여성참가자의 수\n",
-            "E2.shape: torch.Size([63, 8]) // 이때 8은 남성참가자의 수"
-          ]
-        }
-      ],
-      "source": [
-        "print(f'y.shape: {y.shape}')\n",
-        "print(f'E1.shape: {E1.shape} // 이때 {E1.shape[-1]}은 여성참가자의 수')\n",
-        "print(f'E2.shape: {E2.shape} // 이때 {E2.shape[-1]}은 남성참가자의 수')"
-      ],
-      "id": "a7a4b044-53cb-4779-b35b-593ae82d580c"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "`-` 텐서화 + one_hot-인코딩\n",
+        "\n",
         "`-` `X1` -\\> `여성특징`, `X1` -\\> `여성bias`, `X2` -\\> `남성특징`, `X2`\n",
-        "-\\> `남성bias` 구현"
-      ],
-      "id": "2e455e4f-4521-402b-8db3-1d1051f3821b"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 42,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "torch.manual_seed(43052)\n",
-        "l1 = torch.nn.Linear(in_features=9, out_features=2, bias=False)\n",
-        "b1 = torch.nn.Linear(in_features=9, out_features=1, bias=False)\n",
-        "l2 = torch.nn.Linear(in_features=8, out_features=2, bias=False)\n",
-        "b2 = torch.nn.Linear(in_features=8, out_features=1, bias=False)\n",
-        "W_features = l1(E1) \n",
-        "M_features = l2(E2) \n",
-        "W_bias = b1(E1) \n",
-        "M_bias = b2(E2) "
-      ],
-      "id": "b8391d8a-dbfd-476d-bda6-374b74b733a7"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 43,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "pd.DataFrame(np.concatenate([W_features.data,M_features.data,W_bias.data,M_bias.data],axis=1))\\\n",
-        ".set_axis(['여성특징1','여성특징2','여성bias','남성특징1','남성특징2','남성bias'],axis=1)"
-      ],
-      "id": "dc5adc4d-8dfb-4f2e-bf68-f4b222f7e888"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "-\\> `남성bias` 구현\n",
+        "\n",
         "## D. 할일2의 구현 – step1~4 수행\n",
         "\n",
-        "`-` step1: yhat을 구하자."
-      ],
-      "id": "2e182cbd-d834-405e-8bde-044cccf65855"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1000,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "sig = torch.nn.Sigmoid()\n",
-        "match_scores = (W_features * M_features).sum(axis=1).reshape(-1,1) + W_bias + M_bias\n",
-        "yhat = sig(match_scores)*5 \n",
-        "yhat[:5]"
-      ],
-      "id": "282459e5-9dd7-4978-bb91-bedf8dcea161"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "`-` step2: 손실계산"
-      ],
-      "id": "27e4a834-2ea6-487b-bfce-35bc9622a3f2"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1001,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "loss_fn = torch.nn.MSELoss()\n",
-        "loss = loss_fn(yhat,y)"
-      ],
-      "id": "18614713-76f7-4a54-a233-98289c3bcdc8"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "`-` step3: 미분"
-      ],
-      "id": "c6fa9a7c-e0fa-4f80-8cc7-41d205e8fd6a"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1002,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "l1.weight.data,b1.weight.data,l2.weight.data,b2.weight.data"
-      ],
-      "id": "54ee770b-bcf6-4069-87af-704fe9248c3f"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1003,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "l1.weight.grad,b1.weight.grad,l2.weight.grad,b2.weight.grad "
-      ],
-      "id": "2f6fa3cf-9dd3-49b4-9183-0d47ab236f49"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1004,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "loss.backward()"
-      ],
-      "id": "de90f4e7-9156-48cd-9be5-5475772114fc"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1005,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "l1.weight.data,b1.weight.data,l2.weight.data,b2.weight.data"
-      ],
-      "id": "164ba1e9-1c94-4bd2-88eb-66c44f32f546"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1006,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "l1.weight.grad,b1.weight.grad,l2.weight.grad,b2.weight.grad "
-      ],
-      "id": "2dd82f5b-eb68-4f71-ba59-c04e252f3c8c"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "`-` step4: update"
-      ],
-      "id": "c04b9beb-5c12-45ed-83ff-4e4b6667013a"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1007,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "params = list(l1.parameters()) + list(b1.parameters()) + list(l2.parameters()) + list(b2.parameters())\n",
-        "optimizr = torch.optim.Adam(params)\n",
-        "optimizr.step()"
-      ],
-      "id": "8c7dcb39-516d-43f4-b203-db6a109d2c74"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1010,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "l1.weight.data,b1.weight.data,l2.weight.data,b2.weight.data # 조금 바뀜"
-      ],
-      "id": "2c6e5271-5daf-4b4f-baa9-81c7866a7dc8"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1012,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "l1.weight.grad,b1.weight.grad,l2.weight.grad,b2.weight.grad "
-      ],
-      "id": "54970809-5f7e-4047-b7ac-8b5f21b5db69"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1015,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "optimizr.zero_grad()"
-      ],
-      "id": "74973a87-f260-4cf6-a1e7-a964fad656fd"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1016,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "l1.weight.data,b1.weight.data,l2.weight.data,b2.weight.data "
-      ],
-      "id": "a7f76a55-cde0-428d-ba1f-3f589b6376cf"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1018,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "l1.weight.grad,b1.weight.grad,l2.weight.grad,b2.weight.grad"
-      ],
-      "id": "015456f4-a8fa-4ff9-a796-e5da8cdd6940"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "`-` step1: yhat을 구하자.\n",
+        "\n",
+        "`-` step2: 손실계산\n",
+        "\n",
+        "`-` step3: 미분\n",
+        "\n",
+        "`-` step4: update\n",
+        "\n",
         "## E. 코드정리"
       ],
-      "id": "8f898844-eb88-4bcb-b664-924426602f55"
+      "id": "b7de9c8f-0d6f-4c85-8bfa-fa2c353c8697"
     },
     {
       "cell_type": "code",
-      "execution_count": 1019,
+      "execution_count": 59,
       "metadata": {
         "tags": []
       },
@@ -919,7 +602,7 @@
         "    W_bias = b1(E1)\n",
         "    M_features = l2(E2) \n",
         "    M_bias = b2(E2)\n",
-        "    dot = (W_features * M_features + W_bias + M_bias).sum(axis=1)\n",
+        "    dot = (W_features * M_features).sum(axis=1).reshppe\n",
         "    yhat = sig(dot).reshape(-1,1) * 5\n",
         "    ## step2 \n",
         "    loss = loss_fn(yhat,y)\n",
@@ -933,7 +616,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1029,
+      "execution_count": 60,
       "metadata": {
         "tags": []
       },
@@ -949,34 +632,7 @@
       "source": [
         "## F. 모형의 해석"
       ],
-      "id": "775ae0c6-dea9-4b14-9465-e36fe25f8b7c"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1036,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "df_ebdspace = pd.DataFrame(torch.concat([W_features.data*M_features.data,W_bias.data, M_bias.data],axis=1))\n",
-        "df_ebdspace.columns = ['잠재특징1궁합','잠재특징2궁합','여성바이어스','남성바이어스']\n",
-        "df_yhat = pd.DataFrame(yhat.data,columns=['yhat'])\n",
-        "pd.concat([df_train,df_yhat,df_ebdspace],axis=1)[:56]"
-      ],
-      "id": "de49800a-7972-4d6c-ad0a-ccd5e19ce680"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1035,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "pd.concat([df_train,df_yhat,df_ebdspace],axis=1)[56:]"
-      ],
-      "id": "0ea31d76-3b58-4051-bf16-abf04fb60347"
+      "id": "bba0e850-eaaa-4bbb-860f-7fec319cd5be"
     }
   ],
   "nbformat": 4,
