--- a/docs/posts/10wk-2.out.ipynb
+++ b/docs/posts/10wk-2.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "8b07847e-df22-4442-adfe-2cdafd90f110"
+      "id": "b55b8561-6c48-48b2-b365-b3dc19862d54"
     },
     {
       "cell_type": "code",
@@ -33,7 +33,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "85534895-5b37-4ec3-9bf9-ec77b04a48c8"
+      "id": "4f4102b7-ae6d-4d6b-a3df-77363ea2c803"
     },
     {
       "cell_type": "code",
@@ -57,7 +57,7 @@
         "\n",
         "`-` 주어진 자료가 아래와 같다고 하자."
       ],
-      "id": "db946459-2100-4588-8360-71c44306c4b2"
+      "id": "b842b67d-15fb-4249-9ba6-54812525a186"
     },
     {
       "cell_type": "code",
@@ -103,7 +103,7 @@
       "source": [
         "`-` 문제1: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "c7c4394a-cf25-43d9-aa11-9346dbe6fa7a"
+      "id": "bea0faf0-d029-46ff-911c-b9e04743d654"
     },
     {
       "cell_type": "code",
@@ -145,7 +145,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "ca0cdb5a-8b64-485f-9e5c-603d295def85"
+      "id": "55283501-51be-4c79-a8af-44a3f7bd1aed"
     },
     {
       "cell_type": "code",
@@ -199,7 +199,7 @@
       "source": [
         "`-` 문제2: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "438afe81-1f6c-4ce1-b4ce-3bd0c06375ca"
+      "id": "be06ff58-d0e4-4268-bd3e-a462794aa83f"
     },
     {
       "cell_type": "code",
@@ -242,7 +242,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "1af2af3f-8c55-46e7-b4fa-50387a55b6c1"
+      "id": "1b0a188f-5009-4f84-bf13-f2801ee10525"
     },
     {
       "cell_type": "code",
@@ -302,7 +302,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "2097312e-f988-4d5d-a3de-81dce1375757"
+      "id": "604ead8d-9c9b-4dd9-8c3b-4cdfde1b4c43"
     },
     {
       "cell_type": "code",
@@ -355,7 +355,7 @@
         "옥순의I성향$\\times$영식의I성향 $+$ 옥순의N성향$\\times$영식의N성향 $+$\n",
         "옥순의매력 $+$ 영식의매력"
       ],
-      "id": "26ff08e5-5ea6-4993-a73b-7c4fca325617"
+      "id": "cece2ed9-147a-4736-8c21-b0be8a7f733f"
     },
     {
       "cell_type": "code",
@@ -381,7 +381,7 @@
         "**(2)** 영자(IN)와 다호(ES)의 궁합 $\\approx$ 영자I성향$\\times$다호I성향\n",
         "$+$ 영자N성향$\\times$다호의N성향 $+$ 영자의매력 $+$ 다호의매력"
       ],
-      "id": "f2a8bc6b-4888-448f-9778-6270cee80be2"
+      "id": "b5f268ec-0599-414f-8360-13fd9ad7e4a8"
     },
     {
       "cell_type": "code",
@@ -431,7 +431,7 @@
         "**(3)** 하니(I)와 영호(IS)의 궁합 $\\approx$ 하니I성향$\\times$영호I성향\n",
         "$+$ 하니N성향$\\times$영호의N성향 $+$ 하니의매력 $+$ 영호의매력"
       ],
-      "id": "af6b2f45-eb9b-43ba-b734-69731ba19015"
+      "id": "9ccba5c8-631b-4d9c-9587-4181391fb1ee"
     },
     {
       "cell_type": "code",
@@ -458,7 +458,7 @@
         "\n",
         "`-` 전체 사용자의 설정값"
       ],
-      "id": "1be64d78-37e0-42cc-bc6d-c32ab575a3e7"
+      "id": "304d1650-2456-4ae4-b776-9277f3ff89d2"
     },
     {
       "cell_type": "code",
@@ -511,7 +511,7 @@
       "source": [
         "`-` 아래의 행렬곱 관찰"
       ],
-      "id": "46ffd6c0-0dff-4241-b0bf-1c4eea8b743d"
+      "id": "a857da6b-dc6b-409e-bfe7-3d0d333ce6c5"
     },
     {
       "cell_type": "code",
@@ -556,7 +556,7 @@
         "\n",
         "`-` 주어진 자료와 우리가 임의로 만든 궁합매트릭스를 비교해보자."
       ],
-      "id": "72a09539-36f0-42b0-8add-e0d714d140a1"
+      "id": "f7c9cd9c-19d2-45aa-a144-6de676744b55"
     },
     {
       "cell_type": "code",
@@ -672,11 +672,11 @@
         "\n",
         "[6] 1.21+1.11 = 2.32"
       ],
-      "id": "4873b2b3-3698-4943-a448-e611246fe0cc"
+      "id": "ee408103-5600-4c77-8617-6afc0f9d0d85"
     },
     {
       "cell_type": "code",
-      "execution_count": 932,
+      "execution_count": 1067,
       "metadata": {
         "tags": []
       },
@@ -693,11 +693,11 @@
       "source": [
         "`-` 이름을 숫자화"
       ],
-      "id": "8d77b4be-a532-4395-b0be-2ecdc7cc4727"
+      "id": "cae79dd3-e05b-4d9f-9743-ed1b0acf0a8d"
     },
     {
       "cell_type": "code",
-      "execution_count": 933,
+      "execution_count": 1068,
       "metadata": {
         "tags": []
       },
@@ -710,7 +710,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 936,
+      "execution_count": 1069,
       "metadata": {
         "tags": []
       },
@@ -728,11 +728,11 @@
       "source": [
         "`-` 텐서화 + one_hot-인코딩"
       ],
-      "id": "b3fb30d1-c123-4688-8348-364ab2aa466d"
+      "id": "46014d33-e05b-4165-9905-095a9fceadff"
     },
     {
       "cell_type": "code",
-      "execution_count": 1037,
+      "execution_count": 1070,
       "metadata": {
         "tags": []
       },
@@ -748,7 +748,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1038,
+      "execution_count": 1071,
       "metadata": {
         "tags": []
       },
@@ -760,7 +760,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1039,
+      "execution_count": 1072,
       "metadata": {
         "tags": []
       },
@@ -772,7 +772,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1040,
+      "execution_count": 1073,
       "metadata": {
         "tags": []
       },
@@ -784,7 +784,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1041,
+      "execution_count": 1074,
       "metadata": {
         "tags": []
       },
@@ -796,7 +796,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1045,
+      "execution_count": 1075,
       "metadata": {
         "tags": []
       },
@@ -829,11 +829,11 @@
         "`-` `X1` -\\> `여성특징`, `X1` -\\> `여성bias`, `X2` -\\> `남성특징`, `X2`\n",
         "-\\> `남성bias` 구현"
       ],
-      "id": "59085f36-4043-40bc-b3a3-a85d1b1c4c05"
+      "id": "2e051ded-f1a7-4c9b-9c2d-0854adb110fc"
     },
     {
       "cell_type": "code",
-      "execution_count": 1046,
+      "execution_count": 1076,
       "metadata": {
         "tags": []
       },
@@ -853,7 +853,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1047,
+      "execution_count": 1077,
       "metadata": {
         "tags": []
       },
@@ -872,11 +872,11 @@
         "\n",
         "`-` step1: yhat을 구하자."
       ],
-      "id": "c6886aef-8abd-45b4-b9be-36791f24e0c5"
+      "id": "a47cd929-4b30-4b63-a5b0-218010f4ab40"
     },
     {
       "cell_type": "code",
-      "execution_count": 1048,
+      "execution_count": 1078,
       "metadata": {
         "tags": []
       },
@@ -895,11 +895,11 @@
       "source": [
         "`-` step2: 손실계산"
       ],
-      "id": "1b1b16b6-c519-474b-88c5-1b2f6120e34f"
+      "id": "3bf3de14-bba9-4a39-9fb5-758207e48446"
     },
     {
       "cell_type": "code",
-      "execution_count": 1049,
+      "execution_count": 1079,
       "metadata": {
         "tags": []
       },
@@ -916,11 +916,11 @@
       "source": [
         "`-` step3: 미분"
       ],
-      "id": "3481bba2-e3a5-4e2c-b212-67c2699dc878"
+      "id": "6540fa44-b570-4025-be04-59f36990c4af"
     },
     {
       "cell_type": "code",
-      "execution_count": 1050,
+      "execution_count": 1080,
       "metadata": {
         "tags": []
       },
@@ -932,7 +932,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1051,
+      "execution_count": 1081,
       "metadata": {
         "tags": []
       },
@@ -944,7 +944,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1052,
+      "execution_count": 1082,
       "metadata": {
         "tags": []
       },
@@ -956,7 +956,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1053,
+      "execution_count": 1083,
       "metadata": {
         "tags": []
       },
@@ -968,7 +968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1054,
+      "execution_count": 1084,
       "metadata": {
         "tags": []
       },
@@ -984,25 +984,25 @@
       "source": [
         "`-` step4: update"
       ],
-      "id": "724e9dfc-8dc1-4dd4-a0ef-e7e7103a0518"
+      "id": "3bc2daec-141a-4733-9482-1040b69ee0da"
     },
     {
       "cell_type": "code",
-      "execution_count": 1055,
+      "execution_count": 1085,
       "metadata": {
         "tags": []
       },
       "outputs": [],
       "source": [
         "params = list(l1.parameters()) + list(b1.parameters()) + list(l2.parameters()) + list(b2.parameters())\n",
-        "optimizr = torch.optim.Adam(params)\n",
+        "optimizr = torch.optim.Adam(params,lr=0.1)\n",
         "optimizr.step()"
       ],
       "id": "8c7dcb39-516d-43f4-b203-db6a109d2c74"
     },
     {
       "cell_type": "code",
-      "execution_count": 1056,
+      "execution_count": 1086,
       "metadata": {
         "tags": []
       },
@@ -1014,7 +1014,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1057,
+      "execution_count": 1087,
       "metadata": {
         "tags": []
       },
@@ -1026,7 +1026,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1058,
+      "execution_count": 1088,
       "metadata": {
         "tags": []
       },
@@ -1038,7 +1038,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1059,
+      "execution_count": 1089,
       "metadata": {
         "tags": []
       },
@@ -1050,7 +1050,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1060,
+      "execution_count": 1090,
       "metadata": {
         "tags": []
       },
@@ -1066,11 +1066,11 @@
       "source": [
         "## E. 코드정리"
       ],
-      "id": "3381d198-3482-49bb-a67d-347226412e92"
+      "id": "92bc14cd-b7c3-468e-9540-4a5b040e172f"
     },
     {
       "cell_type": "code",
-      "execution_count": 1062,
+      "execution_count": 1095,
       "metadata": {
         "tags": []
       },
@@ -1086,17 +1086,15 @@
         "E2 = torch.nn.functional.one_hot(X2).float()\n",
         "y = torch.tensor(df['y']).float().reshape(-1,1)\n",
         "#--#\n",
-        "torch.manual_seed(0)\n",
+        "torch.manual_seed(43052)\n",
         "l1 = torch.nn.Linear(in_features=9,out_features=2,bias=False)\n",
         "b1 = torch.nn.Linear(in_features=9,out_features=1,bias=False)\n",
         "l2 = torch.nn.Linear(in_features=8,out_features=2,bias=False)\n",
         "b2 = torch.nn.Linear(in_features=8,out_features=1,bias=False)\n",
         "sig = torch.nn.Sigmoid()\n",
         "loss_fn = torch.nn.MSELoss()\n",
-        "optimizr = torch.optim.Adam(\n",
-        "    list(l1.parameters())+list(l2.parameters())+list(b1.parameters())+list(b2.parameters()),\n",
-        "    lr=0.1\n",
-        ")\n",
+        "params = list(l1.parameters()) + list(b1.parameters()) + list(l2.parameters()) + list(b2.parameters())\n",
+        "optimizr = torch.optim.Adam(params,lr=0.1)\n",
         "#--#\n",
         "for epoc in range(100):\n",
         "    ## step1 \n",
@@ -1104,8 +1102,8 @@
         "    W_bias = b1(E1)\n",
         "    M_features = l2(E2) \n",
         "    M_bias = b2(E2)\n",
-        "    dot = (W_features * M_features + W_bias + M_bias).sum(axis=1)\n",
-        "    yhat = sig(dot).reshape(-1,1) * 5\n",
+        "    match_scores = (W_features * M_features).sum(axis=1).reshape(-1,1) + W_bias + M_bias\n",
+        "    yhat = sig(match_scores)*5 \n",
         "    ## step2 \n",
         "    loss = loss_fn(yhat,y)\n",
         "    ## step3 \n",
@@ -1118,7 +1116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1063,
+      "execution_count": 1096,
       "metadata": {
         "tags": []
       },
@@ -1134,11 +1132,11 @@
       "source": [
         "## F. 모형의 해석"
       ],
-      "id": "00507a58-e8b1-43b4-a2de-b1c5441e7dc0"
+      "id": "8c39dd8b-62ad-49dc-ac8b-0d6cd50e158d"
     },
     {
       "cell_type": "code",
-      "execution_count": 1064,
+      "execution_count": 1097,
       "metadata": {
         "tags": []
       },
@@ -1153,7 +1151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1065,
+      "execution_count": 1098,
       "metadata": {
         "tags": []
       },
